kube-04/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blog
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - www.demo3.example.com
  #   secretName: demo3.example.com
  rules:
  - host: blog.demo3.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog
            port:
              number: 3333
